## Process this file with automake to generate Makefile.in

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = program

include_HEADERS = debug.h sys.h
program_SOURCES = debug.cc program.cc

# --------------- Maintainer's Section

MAINTAINERCLEANFILES = aclocal.m4 config.h.in configure stamp-h.in Makefile.in \
        install-sh missing mkinstalldirs config.cache config.log config.status

